--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "angular-calendar": "^0.26.4",
     "core-js": "^2.5.4",
     "date-fns": "^1.30.1",
+    "ng-fullcalendar": "^1.7.1",
     "rxjs": "^6.0.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular-devkit/build-angular": "^0.12.3",
     "@angular/cli": "~7.1.3",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
