--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^1.30.1",
     "ng-fullcalendar": "^1.7.1",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
